# aqe-certificaciones

./: .gitignore  .pre-commit-config.yaml  README.md  evidencias_2024.csv  hello.py  pyproject.toml  requirements.txt  resultados_finales_validados.csv  resultados_finales_validados.xlsx  resultados_validacion_modificado_20250527_115040.csv  resultados_validacion_modificado_20250527_115947.csv  server.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/hooks/: useGlobalHotkeys.js
src/: check_evidencias.py  crear_fichero_data.py
